--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,7 +4,7 @@ platform: x64
 clone_folder: C:\projects
   
 install:
-  - '"C:\Program Files (x86)\Microsoft Visual Studio 15.0\VC\vcvarsall.bat" amd64'
+  - '"C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" amd64'
   - cd C:\projects
   # Get nasm, install it and add it to the path
   - curl -L -o nasminst.exe https://www.nasm.us/pub/nasm/releasebuilds/2.14rc15/win64/nasm-2.14rc15-installer-x64.exe
