Fix for NASM install

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,7 +9,8 @@ install:
   # Get nasm, install it and add it to the path
   - curl -L -o nasminst.exe https://www.nasm.us/pub/nasm/releasebuilds/2.14rc15/win64/nasm-2.14rc15-installer-x64.exe
   - start /wait nasminst.exe /S
-  - ps: $env:path="C:\Program Files (x86)\nasm;$($env:path)"
+  - ps: $env:path="C:\Program Files\NASM;$($env:path)"
+  - where nasm
   # Get Qt and openSSL
   - git clone --single-branch -b 5.11 https://github.com/qt/qtbase.git Qt --depth 1
   - git clone --single-branch -b OpenSSL_1_1_1-stable https://github.com/openssl/openssl.git openSSL --depth 1
