--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,12 +13,16 @@ install:
   - where nasm
   # Get bison and flex, unzip it, rename it and add it to PATH
   - curl -L -o winflexbison.zip https://github.com/lexxmark/winflexbison/releases/download/v2.5.16/winflexbison-2.5.16.zip
-  - 7z e winflexbison.zip -owinflexbison
+  - 7z x winflexbison.zip -owinflexbison
   - cd winflexbison
   - copy win_flex.exe flex.exe
   - copy win_bison.exe bison.exe
   - cd ..
   - ps: $env:path="C:\projects\winflexbison;$($env:path)"
+  # Get jom and add it to the path
+  - curl -L -o jom.zip http://download.qt.io/official_releases/jom/jom.zip
+  - 7z x jom.zip -ojom
+  - ps: $env:path="C:\projects\jom;$($env:path)"
   # Get Qt and openSSL
   - git clone --single-branch -b 5.11 https://github.com/qt/qtbase.git Qt --depth 1
   - git clone --single-branch -b OpenSSL_1_1_1-stable https://github.com/openssl/openssl.git openSSL --depth 1
@@ -32,9 +36,9 @@ build_script:
   # Build Qt
   - cd C:\projects\Qt
   - .\configure.bat -release -opensource -confirm-license -opengl dynamic -platform win32-msvc2015 -openssl "-IC:\Program Files\openSSL\include" "-LC:\Program Files\openSSL\lib" -nomake examples -nomake tests -no-direct2d
-  # start compiling
   - where nmake
-  - nmake
+  - where jom
+  - jom
 
 after_build:
   
