--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ compiler:
 
 install:
 # Get the precompiled Qt libraries
-- curl -L ... -o Qt.zip
+- curl -L https://github.com/ChristianFeldmann/YUViewQt/releases/download/QtBase-5.11/Qt-5.11_mac.zip -o Qt.zip
 - unzip -a Qt.zip
 # Get QtCharts
 - git clone --single-branch -b 5.11 https://github.com/qt/qtcharts.git QtCharts --depth 1
