--- a/.travis.yml
+++ b/.travis.yml
@@ -14,20 +14,18 @@ install:
 - git clone --single-branch -b 5.11 https://github.com/qt/qtbase.git Qt_build --depth 1
 
 script:
-- cd /Users/travis/build/
-- ls -l
-- cd /Users/travis/build/ChristianFeldmann/YUViewQt
+# Build QtBase and install it to /Users/travis/build/Qt
 - cd Qt_build
-- ./configure -release -opensource -confirm-license -prefix /Users/travis/build/Qt -openssl -I /Users/travis/build/ChristianFeldmann/YUViewQt/openSSL/include/ -L /Users/travis/build/ChristianFeldmann/YUViewQt/openSSL/ -nomake examples
+- ./configure -release -opensource -confirm-license -prefix /Users/travis/build/Qt -openssl -I ${TRAVIS_BUILD_DIR}/openSSL/include/ -L ${TRAVIS_BUILD_DIR}/YUViewQt/openSSL/ -nomake examples
 - make
 - make install
 - cd ..
 
 before_deploy:
-# Zip the Qt folder
+# Zip the Qt folder in /Users/travis/build/Qt. Write the zip file to 
 - cd /Users/travis/build/
-- zip --quiet -r /Users/travis/build/ChristianFeldmann/YUViewQt/Qt-5.11_mac.zip Qt
-- cd /Users/travis/build/ChristianFeldmann/YUViewQt
+- zip --quiet -r ${TRAVIS_BUILD_DIR}/Qt-5.11_mac.zip Qt/bin Qt/lib Qt/include Qt/mkspecs Qt/plugins
+- cd ${TRAVIS_BUILD_DIR}
 - ls -l
 
 deploy:
