Add more missing files

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
 before_deploy:
 # Zip the QtCharts folder
 # This version of QtCharts is not yet installed so on the target build machine you have to run "make install"
-- zip -r QtCharts-5.13.1_mac.zip QtCharts/bin QtCharts/lib QtCharts/include QtCharts/mkspecs QtCharts/Makefile QtCharts/.qmake.cache QtCharts/QtCharts.pro QtCharts/src/Makefile QtCharts/src/src.pro
+- zip -r QtCharts-5.13.1_mac.zip QtCharts/bin QtCharts/lib QtCharts/include QtCharts/mkspecs QtCharts/Makefile QtCharts/.qmake.cache QtCharts/QtCharts.pro QtCharts/src/Makefile QtCharts/src/src.pro QtCharts/src/charts/Makefile QtCharts/src/charts/src.pro
 
 deploy:
   skip_cleanup: true
