--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -29,7 +29,7 @@ build_script:
 after_build:
   # Pack all the libraries, dlls and include files into one zip
   - cd C:\projects
-  - 7z a Qt-5.13.1-Charts.zip QtCharts/bin QtCharts/lib QtCharts/include QtCharts/mkspecs
+  - 7z a Qt-5.13.1-Charts.zip QtCharts/bin QtCharts/lib QtCharts/include QtCharts/mkspecs QtCharts/src
   
 artifacts:
   - path: Qt-5.13.1-Charts.zip
