--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,10 @@ script:
       make
       ls
     fi
-  - |
-    if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
-      curl -L -o nasminst.exe https://www.nasm.us/pub/nasm/releasebuilds/2.14rc15/win64/nasm-2.14rc15-installer-x64.exe
-      start /wait nasminst.exe /S
-      ps: $env:path="C:\Program Files\NASM;$($env:path)"
-      where nasm
-    fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then curl -L -o nasminst.exe https://www.nasm.us/pub/nasm/releasebuilds/2.14rc15/win64/nasm-2.14rc15-installer-x64.exe; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then start /wait nasminst.exe /S; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then ps: $env:path="C:\Program Files\NASM;$($env:path)"; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then where nasm; fi
   - cd ..
 
 after_success:
