Also install perl

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ install:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install nasm; fi
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then export PATH=$PATH:";C:\Program Files\NASM"; fi
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then nasm --version; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install strawberryperl; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then perl --version; fi
 
 script:
   - cd openSSL
