--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ install:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then nasm --version; fi
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install strawberryperl; fi
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then perl --version; fi
-
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install VisualCppBuildTools; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64; fi
+  
 script:
   - cd openSSL
   - |
