--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ install:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install strawberryperl; fi
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then perl --version; fi
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install VisualCppBuildTools; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco uninstall mingw; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco uninstall llvm; fi
   
 script:
   - cd openSSL
