--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ install:
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install VisualCppBuildTools; fi
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco uninstall mingw; fi
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco uninstall llvm; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then unset CC; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then unset CC_FOR_BUILD; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then unset CXX; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then unset CXX_FOR_BUILD; fi
   
 script:
   - cd openSSL
