--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ script:
   - |
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       ./configure -release -opensource -confirm-license -prefix /Users/travis/build/Qt -openssl -I ${TRAVIS_BUILD_DIR}/openSSL/include/ -L ${TRAVIS_BUILD_DIR}/openSSL/ -nomake examples
-      make
+      make -j 2
       make install
     fi
   - if [ "$TRAVIS_OS_NAME" = "windows" ]; then ../buildWindows.bat; fi
