--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: cpp
 matrix:
   include:
-    - os: osx
-      env: OUTPUT_ZIP_FILE=Qtbase-5.13.1_mac.zip
-      env: OPEN_SSL_FILE=openSSL_1_1_1_stable_mac.zip
+    # - os: osx
+    #   env: OUTPUT_ZIP_FILE=Qtbase-5.13.1_mac.zip
+    #   env: OPEN_SSL_FILE=openSSL_1_1_1_stable_mac.zip
     - os: windows
       env: OUTPUT_ZIP_FILE=Qtbase-5.13.1_win.zip
       env: OPEN_SSL_FILE=openSSL_1_1_1_stable_win.zip
