--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,13 @@ install:
       choco install jom
       choco install VisualCppBuildTools
       choco install strawberryperl
-      choco uninstall git
       unset CC
       unset CC_FOR_BUILD
       unset CXX
       unset CXX_FOR_BUILD
+      del 'C:\Program Files\Git\usr\bin\perl.exe'
+      dir 'C:\Program Files\Git\usr\bin\perl.exe'
+      perl --version
     fi
 
 script:
