--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: cpp
 matrix:
   include:
-    # - os: osx
-    #   env: OUTPUT_ZIP_FILE=Qtbase-5.13.1_mac.zip
-    #   env: OPEN_SSL_FILE=openSSL_1_1_1_stable_mac.zip
+    - os: osx
+      env: OUTPUT_ZIP_FILE=Qtbase-5.13.1_mac.zip
+      env: OPEN_SSL_FILE=openSSL_1_1_1_stable_mac.zip
     - os: windows
       env: OUTPUT_ZIP_FILE=Qtbase-5.13.1_win.zip
       env: OPEN_SSL_FILE=openSSL_1_1_1_stable_win.zip
@@ -15,7 +15,7 @@ install:
   # Get the precompiled openssl libraries
   - curl -L https://github.com/ChristianFeldmann/YUViewQt/releases/download/openSSL1.1.1/${OPEN_SSL_FILE} -o openSSL.zip
   - unzip -q -a openSSL.zip
-  # Get Qt into a folder in which we build it
+  # Get Qt sources into a folder in which we build it
   - curl -L https://github.com/qt/qtbase/archive/v5.13.1.zip -o Qtbase.zip
   - unzip -q -a Qtbase.zip
   - mv qtbase-5.13.1 Qt_build
@@ -26,12 +26,13 @@ install:
       choco install VisualCppBuildTools
       choco install strawberryperl
       export PATH=$PATH:";C:\Strawberry\perl\bin"
+      # We have to remove this perl executable because it clashes with strawberry perl.
+      # Strawberry perl is needed because the perl version that comes with git is too old to compile Qt
+      rm 'C:\Program Files\Git\usr\bin\perl.exe'
       unset CC
       unset CC_FOR_BUILD
       unset CXX
       unset CXX_FOR_BUILD
-      rm 'C:\Program Files\Git\usr\bin\perl.exe'
-      perl --version
     fi
 
 script:
